packages/@winglang/wingc/src/jsify/snapshots/fails_preflight_mutarray_field_push_in_inflight_with_clear_hint.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Errors
Preflight "MutArray<num>" object was implicitly converted to "Array" when lifting to inflight - mutable methods cannot be called on a lifted preflight value 7:12
