packages/@winglang/wingc/src/jsify/snapshots/fails_preflight_mutmap_set_in_inflight_with_clear_hint.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Errors
Preflight "MutMap<num>" object was implicitly converted to "Map" when lifting to inflight - mutable methods cannot be called on a lifted preflight value 3:8
