packages/@winglang/wingc/src/jsify/snapshots/fails_typo_on_lifted_mutable_collection_with_standard_message.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Errors
Member "pushhhh" does not exist in "Array" 3:8
