packages/@winglang/wingc/src/jsify/snapshots/fails_when_referencing_this_from_static.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Errors
Member "print" does not exist in "Construct" 3:13
